%% Person Hierarchy Class Diagram
classDiagram
    class IContactable {
        <<interface>>
        +Email : string
        +Phone : string
        +Address : string
    }

    class Person {
        <<abstract>>
        #FirstName : string
        #LastName : string
        #ProfilePhoto : byte[]
        +Email : string
        +Phone : string
        +Address : string
        +FullName : string
        +Validate() : bool
        +GetDisplayName() : string
        +GetDisplayInfo() : string
        +CanBeDeleted() : bool
        +GetEntityType() : string
        +ToString() : string
    }

    class Patient {
        +PatientID : int
        +DateOfBirth : DateTime
        +Gender : string
        +BloodType : string
        +InsuranceNumber : string
        +PatientFamily : string
        +Status : string
        +RoomNumber : string
        +IsDeleted : bool
        +GetAge() : int
        +Validate() : bool
        +GetDisplayName() : string
        +GetDisplayInfo() : string
        +CanBeDeleted() : bool
        +GetEntityType() : string
    }

    class Doctor {
        +DoctorID : int
        +SpecializationID : int
        +SpecializationName : string
        +YearsOfExperience : int
        +Qualification : string
        +Department : string
        +WorkingHours : string
        +IsAvailable : bool
        +IsDeleted : bool
        +GetTitle() : string
        +Validate() : bool
        +GetDisplayName() : string
        +GetDisplayInfo() : string
        +CanBeDeleted() : bool
        +GetEntityType() : string
    }

    class Supplier {
        +SupplierID : int
        +SupplierName : string
        +ContactPerson : string
        +Email : string
        +Phone : string
        +Address : string
        +IsDeleted : bool
        +Validate() : bool
        +GetDisplayName() : string
        +GetDisplayInfo() : string
        +CanBeDeleted() : bool
        +GetEntityType() : string
        +ToString() : string
    }

    IContactable <|.. Person : implements
    Person <|-- Patient : inherits
    Person <|-- Doctor : inherits
    IContactable <|.. Supplier : implements

    note for Person "Abstract base class\nwith virtual methods\nfor polymorphism"
    note for Patient "Overrides virtual methods\nwith Patient-specific logic"
    note for Doctor "Overrides virtual methods\nwith Doctor-specific logic"
    note for Supplier "Implements IContactable\ndirectly (not a Person)"

